--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Pràctica individual 1</title>
 	</head>
 	<body>
-		<p>Primera web de prova</p>
+		<h2>Practiques de Disseny i desenvolupament de jocs web</h2>
+		<button onclick="/p_2/index.html">Acces practica 2</button>
+
 	</body>
 </html>
