--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	</head>
 	<body>
 		<h2>Practiques de Disseny i desenvolupament de jocs web</h2>
-		<button onclick="/p_2/index.html">Acces practica 2</button>
-
+		<a href="">
 	</body>
 </html>
