--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html> 
 <html>
 	<head>
+		<link rel="stylesheet" href="./p_2/styles/main.css"></link>
 		<title>Pràctica individual 1</title>
 	</head>
-	<body>
+	<body id="fondo">
 		<h2>Practiques de Disseny i desenvolupament de jocs web</h2>
-		<a href="">
+		<button class="menu-object" onclick="location.href='/p_2/index.html'"> Accès a la pràctica 2</button>
+
 	</body>
 </html>
