--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html> 
-<html>
+<html lang="cat">
 	<head>
-		<link rel="stylesheet" href="./p_2/styles/main.css"></link>
-		<title>Pràctica individual 1</title>
+		<link rel="stylesheet" href="./p_2/styles/main.css"/>
+		<title>Practica individual 1</title>
 	</head>
 	<body id="fondo">
 		<h2>Practiques de Disseny i desenvolupament de jocs web</h2>
-		<button class="menu-object" onclick="location.href='/p_2/index.html'"> Accès a la pràctica 2</button>
+		<button class="menu-object" onclick="location.href='C:\\Users\\nil46\\Documents\\GitHub\\p_individual\\p_2\\index.html'"> Acces a la practica 2</button>
 
 	</body>
 </html>
