--- a/p_2/index.html
+++ b/p_2/index.html
@@ -8,16 +8,21 @@
 		<title> My first game - Menu </title>
 	</head>
 	<body>
-		<p class="menu-object" id="title">Memory menu</p>
-		<button class="menu-object" onclick="start_game()"> 
-			Start Game 
-		</button>
-		<button class="menu-object" onclick="options()"> 
-			Options 
-		</button>
-		<button class="menu-object" onclick="exit()"> 
+		<h2>Memory menu</h2>
+		  <button class="menu-object" onclick="start_game()">
+			  Start Game
+		  </button>
+
+
+		  <button class="menu-object" onclick="options()">
+		    	Options
+		  </button>
+
+
+		<button class="menu-object" onclick="location.href='../index.html'">
 			Exit 
 		</button>
+
 	</body>
 </html>
 
