--- a/p_2/html/game.html
+++ b/p_2/html/game.html
@@ -7,13 +7,13 @@
 		<title> My first game - Game </title>
 	</head>
 	<body>
-		<p class="menu-object" id="title">Memory game</p>
-		<div>
+		<h2>Memory game</h2>
+		<div id="imatges-joc">
 			<img src="../resources/cb.png" onclick="items[0].do_click()">
 			<img src="../resources/tb.png" onclick="items[1].do_click()">
 			<img src="../resources/tb.png" onclick="items[2].do_click()">
 			<img src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
-		<a class="menu-object" href="../">GoToMenu</a>
+		<a class="menu-object" href="../index.html">GoToMenu</a>
 	</body>
 </html>
