--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body id="fondo">
 		<h2>Practiques de Disseny i desenvolupament de jocs web</h2>
-		<button class="menu-object" onclick="location.href='C:\\Users\\nil46\\Documents\\GitHub\\p_individual\\p_2\\index.html'"> Acces a la practica 2</button>
+		<button class="menu-object" onclick="location.href='p_2/index.html'"> Acces a la practica 2</button>
 
 	</body>
 </html>
