--- a/pi_3/index.html
+++ b/pi_3/index.html
@@ -15,7 +15,7 @@
 		<button class="menu-object" onclick="options()"> 
 			Options 
 		</button>
-		<button class="menu-object" onclick="exit()"> 
+		<button class="menu-object" onclick="location.href='../index.html'"> 
 			Exit 
 		</button>
 	</body>
