--- a/p_2/html/game.html
+++ b/p_2/html/game.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h2>Memory game</h2>
-		<div id="imatges-joc">
+		<div id="menu-object">
 			<img src="../resources/cb.png" onclick="items[0].do_click()">
 			<img src="../resources/tb.png" onclick="items[1].do_click()">
 			<img src="../resources/tb.png" onclick="items[2].do_click()">
