--- a/pi_3/html/options.html
+++ b/pi_3/html/options.html
@@ -5,7 +5,7 @@
 		<script src="../js/loader.js"></script>
 		<title> My first game - Options </title>
 	</head>
-	<body>
+	<body class = "colorFons">
 		<div id="options_id">
 			<p class="menu-object" id="title">Options menú</p>
 			<div class="menu-object">
