--- a/pi_3/index.html
+++ b/pi_3/index.html
@@ -7,7 +7,7 @@
 		<script src="./js/menu_controller.js"></script>
 		<title> My first game - Menu </title>
 	</head>
-	<body>
+	<body class ="colorFons">
 		<p class="menu-object" id="title">Memory menu</p>
 		<button class="menu-object" onclick="start_game()"> 
 			Start Game 
