--- a/pi_3/html/game.html
+++ b/pi_3/html/game.html
@@ -5,7 +5,7 @@
 		<script src="../js/loader.js"></script>
 		<title> My first game - Game </title>
 	</head>
-	<body>
+	<body class ="colorFons">
 		<div id="game_id">
 			<p class="menu-object" id="title" v>Is playing {{username}}</p>
 			<p class="menu-object" id="title" v-if="score_text <= 0"> You Lose </p>
